# GIAIC-HACKATHON-II

./: .gitignore  Documentation-Hackathon-II.md  GEMINI.md  README.md  central-implementation.md  central-plan.md  central-tasks.md  vercel.json
.specify/memory/: constitution.md
Phase-1/: README.md  phase-implementation.md  phase-plan.md  phase-tasks.md  pyproject.toml
Phase-1/specs/features/: add-task.md  complete-task.md  delete-task.md  update-task.md  view-tasks.md
Phase-1/src/: main.py
Phase-2/: README.md  UI-UX.md
Phase-2/backend/: database.py  main.py  models.py  pyproject.toml  security.py  test.db
Phase-2/frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
Phase-2/frontend/app/: page.tsx
Phase-2/frontend/components/: AddTaskForm.tsx  TaskItem.tsx  TaskList.tsx
Phase-2/frontend/context/: AuthContext.tsx
Phase-2/frontend/hoc/: withAuth.tsx
Phase-2/frontend/lib/: api.ts
Phase-2/skills/: better-auth-skills.md  fastapi-skills.md  full-stack-development-skills.md  monorepo-skills.md  neondb-skills.md  nextjs-skills.md  restful-api-design-skills.md  sqlmodel-skills.md
Phase-2/specs/api/: rest-endpoints.md
history/prompts/general/: 037-fix-cors-headers-on-500-errors.misc.prompt.md  1-project-initialization-phase-1-completion-and-documentation-updates.general.prompt.md  (+2 more)
phase03/mcp-server/: mcp_server_main.py  requirements.txt  vercel.json
phase03/mcp-server/app/: __init__.py  config.py  database.py
phase2/backend/: mcp_server_main.py  mcp_vercel.json
phase2/frontend/: package-lock.json  tailwind.config.ts
(+43 files in other folders)
