[project]
name = "backend"
version = "0.1.0"
description = "The FastAPI backend for the Evolution of Todo project."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlmodel",
    "psycopg2-binary", # For Neon DB
    "python-dotenv",
    "python-jose[cryptography]",
    "passlib==1.7.4",
    "bcrypt==4.0.1",

    "python-multipart",
]

[project.optional-dependencies]
dev = [
    "pytest",
]
